k8s/mautic-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mautic-service
  namespace: community
  labels:
    app: mautic
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: mautic
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mautic-ingress
  namespace: community
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - mautic.community.community
      secretName: mautic-tls
  rules:
    - host: "mautic.community.community"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mautic-service
                port:
                  number: 80
